--- a/vc10/Royal_Project.vcxproj.filters
+++ b/vc10/Royal_Project.vcxproj.filters
@@ -29,9 +29,6 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\include\Resources.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="..\include\Rectangle1.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -41,6 +38,7 @@
     <ClInclude Include="..\include\ListNode.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\include\Resources.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Resources.rc">
