--- a/vc10/Royal_Project.vcxproj
+++ b/vc10/Royal_Project.vcxproj
@@ -47,7 +47,7 @@
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <Optimization>Disabled</Optimization>
-      <AdditionalIncludeDirectories>C:\cinder_0.8.4_vc2010\cinder_0.8.4_vc2010\boost;C:\cinder_0.8.4_vc2010\cinder_0.8.4_vc2010\include;..\include;..\..\..\Users\user\Downloads\include;..\..\..\Users\user\Downloads\boost</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Users\Jessica\Downloads\cinder_0.8.4_vc2010\cinder_0.8.4_vc2010\include;C:\Users\Jessica\Downloads\cinder_0.8.4_vc2010\cinder_0.8.4_vc2010\boost;C:\cinder_0.8.4_vc2010\cinder_0.8.4_vc2010\boost;C:\cinder_0.8.4_vc2010\cinder_0.8.4_vc2010\include;..\include;..\..\..\Users\user\Downloads\include;..\..\..\Users\user\Downloads\boost</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>WIN32;_DEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <MinimalRebuild>true</MinimalRebuild>
       <BasicRuntimeChecks>EnableFastChecks</BasicRuntimeChecks>
@@ -58,11 +58,11 @@
       <DebugInformationFormat>EditAndContinue</DebugInformationFormat>
     </ClCompile>
     <ResourceCompile>
-      <AdditionalIncludeDirectories>C:\cinder_0.8.4_vc2010\cinder_0.8.4_vc2010\include;..\..\..\Users\user\Downloads\include;..\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Users\Jessica\Downloads\cinder_0.8.4_vc2010\cinder_0.8.4_vc2010\include;C:\cinder_0.8.4_vc2010\cinder_0.8.4_vc2010\include;..\..\..\Users\user\Downloads\include;..\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ResourceCompile>
     <Link>
       <AdditionalDependencies>cinder_d.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>C:\cinder_0.8.4_vc2010\cinder_0.8.4_vc2010\lib\msw;C:\cinder_0.8.4_vc2010\cinder_0.8.4_vc2010\lib;..\..\..\Users\user\Downloads\lib;..\..\..\Users\user\Downloads\lib\msw;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>C:\Users\Jessica\Downloads\cinder_0.8.4_vc2010\cinder_0.8.4_vc2010\lib\msw;C:\Users\Jessica\Downloads\cinder_0.8.4_vc2010\cinder_0.8.4_vc2010\lib;C:\cinder_0.8.4_vc2010\cinder_0.8.4_vc2010\lib\msw;C:\cinder_0.8.4_vc2010\cinder_0.8.4_vc2010\lib;..\..\..\Users\user\Downloads\lib;..\..\..\Users\user\Downloads\lib\msw;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <SubSystem>Windows</SubSystem>
       <RandomizedBaseAddress>false</RandomizedBaseAddress>
