--- a/vc10/Royal_Project.vcxproj.filters
+++ b/vc10/Royal_Project.vcxproj.filters
@@ -21,9 +21,6 @@
     <ClCompile Include="..\src\Rectangle1.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\src\Circle.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="..\src\ListNode.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -32,13 +29,12 @@
     <ClInclude Include="..\include\Rectangle1.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\include\Circle.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="..\include\ListNode.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\include\Resources.h" />
+    <ClInclude Include="..\include\Resources.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Resources.rc">
